=== 1.2.1 (TBD)
* Also require 'rubygems/command_manager' for gem tasks (ruby)

=== 1.2.0 (2010-3-6)
* Add RJack::TarPit::BaseStrategy.test_line_match for common
  version, etc. file checks. See example usage in this gem's Rakefile.
* Add :java_platform flag for setting gem specification platform to java.
* Add available Gem.configuration in gem command tasks.
* Fix tag task outside of RJack repo.

=== 1.1.0 (2009-12-19)
* Add :rdoc_diagram option to use Graphviz dot --diagram with rdoc.
* Added gem :push (gemcutter) and :install tasks

=== 1.0.1 (2009-10-11)
* Make Hoe the last dependency to avoid version conflict with
  rubyforge or others.

=== 1.0.0 (2009-10-10)
* Initial release.